examples/test/testpolicy4544.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4544
  namespace: namespace347
spec:
  podSelector:
    matchLabels:
      key27: value2
      key33: value31
      key18: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value5
          key41: value47
          key38: value32
      podSelector:
        matchLabels:
          key27: value28
          key23: value28
          key20: value15
